$size[14]{$u{update on 01.11.2024:}
  * fixed map upload features:
    you are now able to upload maptiles / markers / location all individually
  * fixed an issue where alt+tab might cause you to click through the UI
  * merged loftars changes
  * If you experience crashes, please reach out to me on the forums
    My client logs errors in it's own folder

$size[14]{$u{update on 16.06.2024:}
  * added metal plow to radar
  * minor crash fixes

$size[14]{$u{update on 12.06.2024:}
  * added critter aura from havoc
  * added option to spread container windows from ender
  * minor crash fixes

$size[14]{$u{update on 06.06.2024:}
  * fixed decal click on chests
  * added disable window animation option
  * grid tickness is based on render scale now. (You need to re-enable grid after changing the scale)

$size[14]{$u{update on 04.06.2024:}
  * fixed compact mode map resizing
  * maybe fixed a login crash with quest helper.. Can't reproduce on will

$size[14]{$u{update on 03.06.2024:}
  * merged loftar's code
  * merged ender's code
  * small bug fixes

$size[14]{$u{update on 11.02.2024:}
  * merged loftar's code
  * small bug fixes

$size[14]{$u{update on 21.12.2023:}
  * merged loftar's code
  * small bug fixes
  * placing error crashes in a folder with a timestamp.

$size[14]{$u{update on 15.11.2023:}
  * merged loftar's code
  * added option to turn off enhanced waterfall
  * added cart to minimap icons

$size[14]{$u{update on 14.11.2023:}
  * option to turn bring back vanilla chat / minimap layout
  * From Ender: decal placing.
  * Option to prevent right click on decal (Options->General)
  * Option to disable cracking texture
  * From Ender: fixed hardware cursor.

$size[14]{$u{update on 13.11.2023:}
  * fixed alert resources
  * fixed compact mode resize

$size[14]{$u{update on 12.11.2023:}
  * re-merged all loftar code for new repository
  * re-added all the previous features
  * made combat UI movable