@@ -769,6 +769,15 @@ public class Gob implements RenderTree.Node, Sprite.Owner, Skeleton.ModOwner, Eq
 	} catch (Exception ignored) {}
     }
     
+    public void itemact(int modflags) {
+	try {
+	    UI ui = glob.sess.ui;
+	    Coord mc = rc.floor(posres);
+	    MapView map = ui.gui.map;
+	    map.wdgmsg("itemact", ui.mc, mc, modflags, 0, (int)id, mc, 0, -1);
+	} catch (Exception ignored) {}
+    }
+    
     public void tick() {
 	Map<Class<? extends GAttrib>, GAttrib> attr = cloneattrs();
 	for (GAttrib a : attr.values())
